Add button increment and decrement for everybody product

--- a/cartShop/views/index.ejs
+++ b/cartShop/views/index.ejs
@@ -20,12 +20,11 @@
         <button class="btn-post-data-cart" data-id="3">В корзину</button>
       </div>
       <div class="rigth-block">
-        <div class="cart">
+        <div class="cart" style="display: none">
           <h2>Корзина</h2>
 
-          <div class="cart-product-1"></div>
-          <div class="cart-product-2"></div>
-          <div class="cart-product-3"></div>
+          <div class="cart-product"></div>
+
           <button class="btn-to-pay" onclick="location.href='/pay'">
             Оформить заказ
           </button>
