--- a/cartShop/views/index.ejs
+++ b/cartShop/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
