--- a/cartShop/views/index.ejs
+++ b/cartShop/views/index.ejs
@@ -25,6 +25,9 @@
           <h2>Корзина</h2>
 
           <div class="cart-product"></div>
+          <div class="cart-product1"></div>
+          <div class="cart-product2"></div>
+          <div class="cart-product3"></div>
 
           <button class="btn-to-pay" onclick="location.href='/pay'">
             Оформить заказ
