--- a/chatOnSocketIO/views/index.html
+++ b/chatOnSocketIO/views/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <form action="" name="chatForm">
-      <input type="text" name="first-name" />
-      <input type="text" name="msg" />
+      <input class="user-name" type="text" name="first-name" />
+      <input class="msg" type="text" name="msg" />
       <button>Send</button>
     </form>
     <div class="chat-block">
       <div class="chat-block__typing"></div>
-      <div class="chat-block__info">Пользователь оправил вам сообщение:</div>
+      <div class="chat-block__info">Чат:</div>
       <div class="chat-block__content"></div>
     </div>
     <script src="/js/main.js"></script>
