--- a/booksOnMongoDB/views/index.ejs
+++ b/booksOnMongoDB/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Books</title>
     <link rel='stylesheet' href='/style/style.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.2/axios.min.js"></script>
   </head>
@@ -9,24 +9,24 @@
 <!-- GENRE     -->
      <input class = "genre_btn" type="button" value="Добавить жанр"></input>
     <form action="" class="genre hidden" name="formGenre">
-     <input type="text" name="name" placeholder="name">   
+     <input type="text" name="name" placeholder="Наименование жанра">   
      <button type="submit">Send</button>
    </form>
 <!-- AUTHOR -->
      <input class = "author_btn" type="button" value="Добавить автора"></input>
     <form action="" class="author hidden" name="formAuthor">
-     <input type="text" name="name" placeholder="name">   
-     <input type="text" name="short_name" placeholder="short_name">   
+     <input type="text" name="name" placeholder="Полное имя">   
+     <input type="text" name="short_name" placeholder="Короткое имя">   
      <button type="submit">Send</button>
    </form>
 
 <!-- BOOK -->
      <input class = "book_btn" type="button" value="Добавить книгу"></input>
     <form action="" class="book hidden" name="formBook">
-     <input type="text" name="name" placeholder="name">   
-     <input type="text" name="year" placeholder="year">   
-     <input type="text" name="location" placeholder="location">   
-     <input type="text" name="publisher" placeholder="publisher">     
+     <input type="text" name="name" placeholder="Наименование книги">   
+     <input type="text" name="year" placeholder="Год выпуска">   
+     <input type="text" name="location" placeholder="Город">   
+     <input type="text" name="publisher" placeholder="Публикация">     
      <select name="author" multiple="multiple" size="3"></select>
      <select name="genre" multiple="multiple" size="3"></select>  
          <button type="submit">Send</button>
