Create generator bike blocks for client route

--- a/shopOnMongoDB/views/index.ejs
+++ b/shopOnMongoDB/views/index.ejs
@@ -6,7 +6,37 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.2/axios.min.js"></script>
   </head>
   <body>
-    
-   <script src="/js/main.js"></script>
+  <header>
+    <div class="header-outer">
+      <div class="logo">
+        <img src="https://antir.ru/inc/img/klienty/54.png" alt="">
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Меню</a></li>
+        </ul>
+      </div>
+      <div class="search">
+        <form name = "search">
+        <input type="text" name="search">
+        <button type="submit">Поиск</button>
+      </form>
+      </div>
+    </div>
+  </header>
+  <main>
+    <select name="filter" id="">
+      <option value="price-up">По цене(возрастанию)</option>
+      <option value="price-low">По цене(убыванию)</option>
+    </select>
+    <div class="product-outer">
+          
+     </div>
+  </main>
+   <script src="/js/users.js"></script>
   </body>
 </html>
