--- a/shopOnMongoDB/public/style/style.css
+++ b/shopOnMongoDB/public/style/style.css
@@ -1,12 +1,65 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+h2 {
+  margin: 20px 0;
 }
 
-.hidden {
-  display: none;
+.header-outer {
+  width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo>img {
+  width: 150px;
+  height: 50px;
+}
+
+ul {
+  display: flex;
+  }
+
+li {
+  list-style: none;
+}
+a {
+  display: block;
+  padding: 10px;
+  color: #000;
+  text-decoration: none;
+}
+main {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.product-outer {
+  display: flex;
+  margin-top: 50px;
+  flex-wrap: wrap;
+}
+.product {
+  margin-right: 30px;
+}
+.product img {
+  width: 200px;
+  /* height: 200px; */
+}
+.product__title {
+  font-size: 16px;
+  padding: 5px;
+}
+.product__price {
+  font-size: 15px;
+  font-weight: bold;
+  padding: 5px;
 }
