User can create more input in UI

--- a/shopOnMongoDB/views/admin.ejs
+++ b/shopOnMongoDB/views/admin.ejs
@@ -43,6 +43,12 @@
 
 <!-- BIKE -->
     <div class="bike">
+      <h2 class="specification__title">Добавление спецификации</h2>
+      <form name="formSpecification">
+        <input type="text" name="name" placeholder="Имя спецификации">
+        <button type="submit">Добавить</button>
+      </form>
+
         <h2 class="bike__title">Добавление велосипеда</h2>
      <form action="" class="bike" name="formBike">
      <input type="text" name="name" placeholder="Наименование" value="Велосипед">   
