Update function insert bike in UI

--- a/shopOnMongoDB/views/admin.ejs
+++ b/shopOnMongoDB/views/admin.ejs
@@ -52,12 +52,12 @@
         <h2 class="bike__title">Добавление велосипеда</h2>
      <form action="" class="bike" name="formBike">
      <input type="text" name="name" placeholder="Наименование" value="Велосипед">   
-     <select name="brend"></select>
+     <select name="brends"></select>
      <input type="text" name="model" placeholder="Модель"> 
      <select name="wheels"></select>
      <input type="text" name="year" placeholder="Год выпуска">   
-     <select name="color"></select>     
-     <select name="type"></select>
+     <select name="colors"></select>     
+     <select name="types"></select>
      <select name="brakes">
        <option value="Drum">Барабанные</option>
        <option value="Rim">Ободные</option>
@@ -65,7 +65,7 @@
      </select>  
      <input type="text" name="price" placeholder="Цена">    
      <input type="text" name="about" placeholder="Описание">    
-     <input type="text" name="img" placeholder="Ссылка на картинку"> 
+     <input type="text" name="image" placeholder="Ссылка на картинку"> 
          <button type="submit">Сохранить</button>
    </form>
 </div>
