Update upload image and add filter

--- a/shopOnMongoDB/views/admin.ejs
+++ b/shopOnMongoDB/views/admin.ejs
@@ -30,7 +30,7 @@
 </div>
 <!-- TYPE     -->
     <div class="type">
-        <h2 class="type__title">Добавление типа велосипеда</h2>
+        <h2 class="type__title">Добавление типа</h2>
         <form action="" class="type" name="formType">
      <input type="text" name="name" placeholder="Наименование типа велосипеда">   
      <button type="submit">Сохранить</button>
@@ -62,7 +62,7 @@
         <button type="submit">Добавить</button>
       </form>
 
-        <h2 class="bike__title">Добавление велосипеда</h2>
+        <h2 class="bike__title">Добавление товара</h2>
      <form action="" class="bike" name="formBike">
      <select name="categories" multiple="multiple" size="2"></select>
      <select name="brends"></select>
@@ -78,7 +78,7 @@
      </select>  
      <input type="text" name="price" placeholder="Цена">    
      <input type="text" name="about" placeholder="Описание">    
-     <input type="file" name="image"> 
+     <input type="file" name="image" accept="image/*"> 
          <button type="submit">Сохранить</button>
    </form>
 </div>
