--- a/shopOnMongoDB/views/index.ejs
+++ b/shopOnMongoDB/views/index.ejs
@@ -29,10 +29,18 @@
     </div>
   </header>
   <main>
-    <select name="filter" id="">
+    <form  name="filter" action="">
+    <select id="">
       <option value="price-up">По цене(возрастанию)</option>
       <option value="price-low">По цене(убыванию)</option>
     </select>
+  </form>
+ 
+    <select name="filterCategory" id="">
+      <option value="bike" >Велосипед</option>
+      <option value="scooter">Самокат</option>
+    </select>
+
     <div class="product-outer">
           
      </div>
