--- a/shopOnMongoDB/views/index.ejs
+++ b/shopOnMongoDB/views/index.ejs
@@ -4,6 +4,7 @@
     <title>Bike shop</title>
     <link rel='stylesheet' href='/style/style.css' />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.2/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   </head>
   <body>
   <header>
@@ -29,14 +30,15 @@
     </div>
   </header>
   <main>
-    <form  name="filter" action="">
-    <select id="">
-      <option value="price-up">По цене(возрастанию)</option>
-      <option value="price-low">По цене(убыванию)</option>
+   
+    <select name="filterPrice" id="">
+      <option value="">Выбрать</option>
+      <option value="priceUp">По цене(возрастанию)</option>
+      <option value="priceLow">По цене(убыванию)</option>
     </select>
-  </form>
  
     <select name="filterCategory" id="">
+      <option value="bike" >Выбрать</option>
       <option value="bike" >Велосипед</option>
       <option value="scooter">Самокат</option>
     </select>
