--- a/chat/views/index.ejs
+++ b/chat/views/index.ejs
@@ -7,11 +7,12 @@
       src="https://unpkg.com/uniqolor/dist/uniqolor.min.js"
       type="text/javascript"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.2/axios.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <form class="login" name="loginForm">
-      <input class="user-name" type="text" name="first-name" />
+      <input class="user-name" type="text" name="login" />
       <button type="submit">Enter chat</button>
     </form>
 
