--- a/chat/views/index.ejs
+++ b/chat/views/index.ejs
@@ -21,7 +21,9 @@
       <button type="submit">Send</button>
     </form>
     <div class="chat-block hidden">
-      <div class="chat-block__typing"></div>
+      <div class="chat-block__typing">
+      
+      </div>
       <div class="chat-block__info">Чат:</div>
       <div class="chat-block__content"></div>
     </div>
